fix overflow de main

--- a/css/general.css
+++ b/css/general.css
@@ -417,6 +417,7 @@ main {
     margin-top: 60px;
     margin-bottom: 60px;
     height: calc(100vh - 120px);
+    overflow: auto;
    }
    
    .heading3 {
